<resources>
    <string name="app_name">Laptop GauMeo</string>
    <string name="home">Home</string>
    <string name="notify">Thông báo</string>
    <string name="laptop_gaming">Laptop Gaming</string>
    <string name="laptop_workstation">Laptop Workstation</string>
    <string name="laptop_caocap">Laptop thời trang cao cấp</string>
    <string name="phukien">Linh kiện laptop</string>
    <string name="aboutus">About us</string>
    <string name="contact">Contact</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log Out</string>
    <string name="thong_bao">Thông báo</string>
    <string name="personal">Tôi</string>
    <string name="list_product">Danh mục sản phẩm</string>
    <string name="hp">HP</string>
    <string name="dell">Dell</string>
    <string name="lenovo">Lenovo</string>
    <string name="asus">Asus</string>
    <string name="msi">MSI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User Name</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Giỏ hàng</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
</resources>
